--- a/RoslynAvaloniaTask/Views/MainWindow.axaml
+++ b/RoslynAvaloniaTask/Views/MainWindow.axaml
@@ -18,37 +18,6 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
     
-    <!-- <StackPanel Orientation="Vertical"> -->
-    <!--     <ExperimentalAcrylicBorder IsHitTestVisible="False"> -->
-    <!--         <ExperimentalAcrylicBorder.Material> -->
-    <!--             <ExperimentalAcrylicMaterial -->
-    <!--                 BackgroundSource="Digger" -->
-    <!--                 TintColor="Black" -->
-    <!--                 TintOpacity="1" -->
-    <!--                 MaterialOpacity="0.65"> -->
-    <!--             </ExperimentalAcrylicMaterial> -->
-    <!--         </ExperimentalAcrylicBorder.Material> -->
-    <!--     </ExperimentalAcrylicBorder> -->
-    <!--      -->
-    <!--     <Button Content="Visualize Code" -->
-    <!--         VerticalAlignment="Top" -->
-    <!--             HorizontalAlignment="Right" -->
-    <!--         Margin="15 15 15 5" -->
-    <!--         Command="{Binding VisualizeCodeCommand}"> -->
-    <!--     </Button> -->
-    <!--      -->
-    <!--     <TextBlock Margin="15 50 15 15">Insert your code:</TextBlock> -->
-    <!--     <TextBox Height="200" AcceptsReturn="True" TextWrapping="Wrap" -->
-    <!--              Margin="15 15 15 5" -->
-    <!--              Watermark="Enter your code here" -->
-    <!--              Text="{Binding CodeText, Mode=TwoWay}" -->
-    <!--              /> -->
-    <!--     <TextBox -->
-    <!--         Height="200" -->
-    <!--         Text="{Binding DisplayText}" Margin="15 5" -->
-    <!--         /> -->
-    <!-- </StackPanel> -->
-    
     <StackPanel Orientation="Vertical">
         <ExperimentalAcrylicBorder IsHitTestVisible="False">
             <ExperimentalAcrylicBorder.Material>
@@ -78,11 +47,8 @@
     
         <TextBox
             Height="200"
-            Text="{Binding DisplayText}" Margin="15 5"
+            Text="{Binding SyntaxTreeText}" Margin="15 5"
         />
     </StackPanel>
-
-    
-    <!-- <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/> -->
     
 </Window>
