--- a/RoslynAvaloniaTask/App.axaml
+++ b/RoslynAvaloniaTask/App.axaml
@@ -12,5 +12,6 @@
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://RoslynAvaloniaTask/Icons.axaml"></StyleInclude>
+        <StyleInclude Source="avares://AvaloniaEdit/Themes/Fluent/AvaloniaEdit.xaml"/>
     </Application.Styles>
 </Application>
